--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,11 +1,17 @@
+* {
+    box-sizing: border-box;
+}
+
 html {
     /* This should make 1rem === 10px (instead of 16).  Thus 1.6rem === 16px */
     font-size: $global-size-scaler;
 }
 
 body {
+    color: $dark-gray;
     font-family: Helvetica, Arial, sans-serif;
     font-size: $m-size;
+    line-height: 1.6;
 }
 
 button {
